#16 [FEAT] Add rss parser worker (#16)
* chore: add RabbitMQ to docker-compose

* style: update docs

* chore: add rss-parser worker to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,31 @@ services:
     ports:
       - 8001:8001
 
+  rabbitmq:
+    container_name: rabbitmq
+    image: heidiks/rabbitmq-delayed-message-exchange:3.9.7-management
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "--quiet", "ping"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+
+  worker:
+    image: rss-parser-consumer
+    environment:
+      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_DATABASE: ${MONGODB_DATABASE}
+      RABBITMQ_URI: ${RABBITMQ_URI}
+      RABBITMQ_QUEUE: ${RABBITMQ_QUEUE}
+
 volumes:
   mongodb-data:
+  rabbitmq-data:
