--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,11 @@
 MONGODB_USER=
 MONGODB_PASSWORD=
+
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+
+# worker
+MONGODB_URI=
+MONGODB_DATABASE=
+RABBITMQ_URI=
+RABBITMQ_QUEUE=
