--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3.7"
 
 services:
+  nginx:
+    image: nginx
+    container_name: nginx
+    depends_on:
+      - api
+    ports:
+      - 80:80
+    volumes:
+      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
+    healthcheck:
+      test: ["CMD", "service", "nginx", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+
   api:
     image: recipes-api
     build: .
