--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,38 @@
 version: "3.7"
 
 services:
+  nginx:
+    image: nginx
+    container_name: nginx
+    depends_on:
+      - api
+    ports:
+      - 80:80
+    volumes:
+      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
+    healthcheck:
+      test: ["CMD", "service", "nginx", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+
+  api:
+    image: recipes-api
+    build: .
+    depends_on:
+      - mongodb
+      - redis
+      - rabbitmq
+    volumes:
+      - ./certs/localhost.crt:/root/certs/localhost.crt:ro
+      - ./certs/localhost.key:/root/certs/localhost.key:ro
+    environment:
+      MONGODB_DATABASE: ${MONGODB_DATABASE}
+      MONGODB_URI: ${MONGODB_URI}
+      RABBITMQ_QUEUE: ${RABBITMQ_QUEUE}
+      RABBITMQ_URI: ${RABBITMQ_URI}
+      REDIS_URL: ${REDIS_URL}
+
   mongodb:
     image: mongo:5.0
     container_name: mongodb
@@ -9,8 +41,8 @@ services:
     volumes:
       - mongodb-data:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
     healthcheck:
       test: ["CMD", "mongosh", "--quiet", "--username", "${MONGODB_USER}", "--password", "${MONGODB_PASSWORD}", "--eval", "'db.serverStatus().ok'"]
       interval: 10s
@@ -37,16 +69,16 @@ services:
       - 8001:8001
 
   rabbitmq:
-    container_name: rabbitmq
     image: heidiks/rabbitmq-delayed-message-exchange:3.9.7-management
+    container_name: rabbitmq
     ports:
       - 5672:5672
       - 15672:15672
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "--quiet", "ping"]
       interval: 10s
@@ -55,11 +87,14 @@ services:
 
   worker:
     image: rss-parser-consumer
+    depends_on:
+      - mongodb
+      - rabbitmq
     environment:
-      MONGODB_URI: ${MONGODB_URI}
       MONGODB_DATABASE: ${MONGODB_DATABASE}
-      RABBITMQ_URI: ${RABBITMQ_URI}
+      MONGODB_URI: ${MONGODB_URI}
       RABBITMQ_QUEUE: ${RABBITMQ_QUEUE}
+      RABBITMQ_URI: ${RABBITMQ_URI}
 
 volumes:
   mongodb-data:
